Logos are all the same size, fixed the layout of the screen, "Bekijk Cases" still floats left, needs to be center

--- a/TheConsultancyFirm/Styles/_ourCustomers.scss
+++ b/TheConsultancyFirm/Styles/_ourCustomers.scss
@@ -25,4 +25,14 @@
 	}
 }
 
+.logos{
+    margin: 0 auto;
+    width: 80%;
+    text-align:center;
+    p{
+        font-family:Raleway, sans-serif;
+        font-style:italic;
+    }
+}
+
 
